Fix: wrap of tech-stack div in modals

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -506,5 +506,11 @@ footer .footer-below {
 
 .modal-tech-stack {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+}
+
+.modal-tech-stack h4 {
+    padding-left: 20px;
+    padding-right: 20px;
 }
